--- a/chat/Cargo.toml
+++ b/chat/Cargo.toml
@@ -8,11 +8,10 @@ name = "websocket-chat-server"
 path = "src/main.rs"
 
 [dependencies]
-actix.workspace = true
-actix-files.workspace = true
-actix-web.workspace = true
-actix-web-actors.workspace = true
-
-env_logger.workspace = true
-log.workspace = true
-rand.workspace = true
+actix = "0.13.1"
+actix-files = "0.6.2"
+actix-web = "4.4.0"
+actix-web-actors = "4.2.0"
+env_logger = "0.10.0"
+log = "0.4.20"
+rand = "0.8.5"
